--- a/about-company.html
+++ b/about-company.html
@@ -32,11 +32,10 @@
                                 Меню
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="#">О компании</a>
-                                <a class="dropdown-item" href="#">Услуги</a>
-                                <a class="dropdown-item" href="#">Охрана труда</a>
-                                <a class="dropdown-item" href="#">Промышленная безопасность</a>
-                                <a class="dropdown-item" href="#">Электробезопасность</a>
+                                <a class="dropdown-item" href="./about-company.html">О компании</a>
+                                <a class="dropdown-item" href="./services.html">Услуги</a>
+                                <a class="dropdown-item" href="./defending-work.html">Охрана труда</a>
+                                <a class="dropdown-item" href="./defending-work.html">Промышленная безопасность</a>
                                 <a class="dropdown-item" href="#">Дополнительные услуги</a>
                                 <a class="dropdown-item" href="#">Цены</a>
                                 <a class="dropdown-item" href="#">Законы</a>
@@ -119,41 +118,43 @@
                     </div>
                 </div>
                 <div class="col-sm">
-                        <div class="strategy-wrapper">
-                                <div class="strategy-number">02</div>
-                                <p>Создать все условия для долгосрочного и взаимовыгодного сотрудничества с нашими клиентами и партнерами</p>
-                            </div>
+                    <div class="strategy-wrapper">
+                        <div class="strategy-number">02</div>
+                        <p>Создать все условия для долгосрочного и взаимовыгодного сотрудничества с нашими клиентами и
+                            партнерами</p>
+                    </div>
                 </div>
                 <div class="col-sm">
-                        <div class="strategy-wrapper">
-                                <div class="strategy-number">03</div>
-                                <p>Идти по пути прогресса, постоянно совершенствоваться, тем самым улучшая качество реализуемой продукции и повышая уровень оказываемых услуг</p>
-                            </div>
+                    <div class="strategy-wrapper">
+                        <div class="strategy-number">03</div>
+                        <p>Идти по пути прогресса, постоянно совершенствоваться, тем самым улучшая качество реализуемой
+                            продукции и повышая уровень оказываемых услуг</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="gallery-wrapper">
         <div class="container">
-                <div class="row about-company-gallery certificates-slider">
-                        <div class="col">
-                            <h2>Лицензии и сертификаты</h2>
-                            <div class="gallery">
-                                <div class="gallery-container">
-                                    <img class="gallery-item" src="./img/certificate-three.png">
-                                    <img class="gallery-item" src="./img/certificate-one.png">
-                                    <img class="gallery-item" src="./img/certificate-two.png">
-                                    <img class="gallery-item" src="./img/certificate-three.png">
-                                    <img class="gallery-item" src="./img/certificate-three.png">
-                                </div>
-                                <div class="gallery-controls"></div>
-                            </div>
+            <div class="row about-company-gallery certificates-slider">
+                <div class="col">
+                    <h2>Лицензии и сертификаты</h2>
+                    <div class="gallery">
+                        <div class="gallery-container">
+                            <img class="gallery-item" src="./img/certificate-three.png">
+                            <img class="gallery-item" src="./img/certificate-one.png">
+                            <img class="gallery-item" src="./img/certificate-two.png">
+                            <img class="gallery-item" src="./img/certificate-three.png">
+                            <img class="gallery-item" src="./img/certificate-three.png">
                         </div>
+                        <div class="gallery-controls"></div>
                     </div>
+                </div>
+            </div>
         </div>
     </div>
- <!-- лого клиентов -->
- <div class="container">
+    <!-- лого клиентов -->
+    <div class="container">
         <div class="row happy-clients-row">
             <div class="col-8 happy-clients">
                 <h2>Десятки довольных <br>
@@ -270,7 +271,7 @@
                 <div class="col-sm-3">
                     <h3>Разделы</h3>
                     <nav class="nav flex-column footer-row-links">
-                        <a class="nav-link" href="#">О компании</a>
+                        <a class="nav-link" href="./about-company.html">О компании</a>
                         <a class="nav-link" href="#">Законы</a>
                         <a class="nav-link" href="#">Наш блог</a>
                         <a class="nav-link" href="#">Контакты</a>
