--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                 <a class="dropdown-item" href="./services.html">Услуги</a>
                                 <a class="dropdown-item" href="./defending-work.html">Охрана труда</a>
                                 <a class="dropdown-item" href="./defending-work.html">Промышленная безопасность</a>
-                                <a class="dropdown-item" href="#">Электробезопасность</a>
+                                <a class="dropdown-item" href="./industrial-safety.html">Электробезопасность</a>
                                 <a class="dropdown-item" href="#">Дополнительные услуги</a>
                                 <a class="dropdown-item" href="#">Цены</a>
                                 <a class="dropdown-item" href="#">Законы</a>
@@ -480,7 +480,7 @@
                 <div class="col-sm-3">
                     <h3>Разделы</h3>
                     <nav class="nav flex-column footer-row-links">
-                        <a class="nav-link" href="#">О компании</a>
+                        <a class="nav-link" href="./about-company.html">О компании</a>
                         <a class="nav-link" href="#">Законы</a>
                         <a class="nav-link" href="#">Наш блог</a>
                         <a class="nav-link" href="#">Контакты</a>
