sixth and seventh page

--- a/industrial-safety.html
+++ b/industrial-safety.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Охрана труда</title>
+    <title>Промышленная безопасность</title>
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -63,7 +63,7 @@
             </div>
         </header>
     </div>
-    <div class="page-defending-work-wrapper industrial-safety-wrapper">
+    <div class="service-page-wrapper industrial-safety-wrapper">
         <div class="container">
             <div class="row about-company-row">
                 <div class="col">
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <div class="page-defending-work-button-links-wrapper row">
+    <div class="service-page-button-links-wrapper row">
         <nav class="nav align-middle nav-pills flex-column flex-md-row">
             <a href="" class="flex-sm-fill text-sm-center nav-link">Охрана труда</a>
             <a href="" class="flex-sm-fill text-sm-center nav-link button-link-active">Промышленная безопасность</a>
@@ -90,7 +90,7 @@
 
     <div class="container">
 
-        <div class="row page-defending-work-learning">
+        <div class="row page-service-learning">
             <div class="col">
                 <h2 class="h2-normal-style">Обучение промышленной безопасности: подготовка и переподготовка специалистов</h2>
                 <p class="p-normal-style">
@@ -111,7 +111,7 @@
                 </p>
             </div>
         </div>
-        <div class="row page-defending-work-learning">
+        <div class="row page-service-learning">
             <div class="col">
                 <h2 class="h2-normal-style">Как избежать штрафов и уголовной ответственности?</h2>
                 <p class="p-normal-style">
@@ -131,7 +131,7 @@
 
             </div>
         </div>
-        <div class="row page-defending-work-kwnoladge">
+        <div class="row page-service-kwnoladge">
             <div class="col">
                 <h2 class="h2-normal-style">Как проходит контроль знаний?</h2>
                 <p class="p-normal-style">После программы обучения, согласно требованиям Закона, обучающиеся проходят
@@ -140,7 +140,7 @@
                     освоение практических навыков.
                 </p>
 
-                <button type="button" class="page-defending-work-button-test"><a href="">Тесты для проверки
+                <button type="button" class="service-page-button-test"><a href="">Тесты для проверки
                         знаний</a></button>
             </div>
         </div>
