--- a/services.html
+++ b/services.html
@@ -74,7 +74,7 @@
                         Конституции РК и специальном законе «О безопасности и охране труда» от 2007 года. Отраслевые
                         стандарты безопасности и стандарты предприятия закреплены отдельными специальными нормативными
                         актами</p>
-                    <a href=""><button type="button">Подробнее об услуге</button></a>
+                    <a href="./defending-work.html"><button type="button">Подробнее об услуге</button></a>
                     <a href=""><button type="button" class="services-second-button">Оставить заявку</button></a>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                         возникновения аварий, с одной стороны, и разработку оптимального плана действий на случай аварии
                         на производстве с целью минимизации негативных последствий для сотрудников и населения – с
                         другой</p>
-                    <a href=""><button type="button">Подробнее об услуге</button></a>
+                    <a href="./industrial-safety.html"><button type="button">Подробнее об услуге</button></a>
                     <a href=""><button type="button" class="services-second-button">Оставить заявку</button></a>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                         обязательной для каждого учреждения. Умение предотвратить возгорание, минимизировать риски и
                         правильно вести при появлении внештатной ситуации – гарантия того, что негативный исход пожара
                         удастся свести к минимуму</p>
-                    <a href=""><button type="button">Подробнее об услуге</button></a>
+                    <a href="./fire-safety.html"><button type="button">Подробнее об услуге</button></a>
                     <a href=""><button type="button" class="services-second-button">Оставить заявку</button></a>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                         и электрическими сетями обучение электробезопасности является обязательным курсом.
                         В этот курс входит не только ознакомление с требованиями нормативно-правовых документов, но и
                         программа для получения уровня допуска к работам с электричеством</p>
-                    <a href=""><button type="button">Подробнее об услуге</button></a>
+                    <a href="./electrical-safety.html"><button type="button">Подробнее об услуге</button></a>
                     <a href=""><button type="button" class="services-second-button">Оставить заявку</button></a>
                 </div>
             </div>
