--- a/electrical-safety.html
+++ b/electrical-safety.html
@@ -71,7 +71,7 @@
                         <h1>Электробезопасность</h1>
                     </div>
                     <div class="breadcrumbs">
-                        Главная <span class="chevron"></span> Услуги <span class="chevron"></span> Охрана труда
+                        Главная <span class="chevron"></span> Услуги <span class="chevron"></span> Электробезопасность
                     </div>
                 </div>
             </div>
