--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <a class="dropdown-item" href="./defending-work.html">Охрана труда</a>
                                 <a class="dropdown-item" href="./defending-work.html">Промышленная безопасность</a>
                                 <a class="dropdown-item" href="./industrial-safety.html">Электробезопасность</a>
-                                <a class="dropdown-item" href="">Дополнительные услуги</a>
+                                <a class="dropdown-item" href="./aditional-services.html">Дополнительные услуги</a>
                                 <a class="dropdown-item" href="#">Цены</a>
                                 <a class="dropdown-item" href="#">Законы</a>
                                 <a class="dropdown-item" href="#">Блог</a>
