the end (almost)

--- a/contacts.html
+++ b/contacts.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Услуги</title>
+    <title>Контакты</title>
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="vanilla-js-carousel-master/carousel.css">
+
 </head>
 
 <body>
@@ -36,7 +37,7 @@
                                 <a class="dropdown-item" href="./services.html">Услуги</a>
                                 <a class="dropdown-item" href="./defending-work.html">Охрана труда</a>
                                 <a class="dropdown-item" href="./defending-work.html">Промышленная безопасность</a>
-                                <a class="dropdown-item" href="#">Электробезопасность</a>
+                                <a class="dropdown-item" href="./industrial-safety.html">Электробезопасность</a>
                                 <a class="dropdown-item" href="#">Дополнительные услуги</a>
                                 <a class="dropdown-item" href="#">Цены</a>
                                 <a class="dropdown-item" href="#">Законы</a>
@@ -63,75 +64,119 @@
             </div>
         </header>
     </div>
-    <div class="services-page-wrapper defending-work-wrapper">
+    <div class="service-page-wrapper contacts-background">
         <div class="container">
-            <div class="row defending-work-wrapper-row">
-                <div class="col-xl">
-                    <h2>Охрана труда</h2>
-                </div>
-                <div class="col-sm">
-                    <p>Требования к рабочей организации по защите условий труда для рабочего персонала прописаны в
-                        Конституции РК и специальном законе «О безопасности и охране труда» от 2007 года. Отраслевые
-                        стандарты безопасности и стандарты предприятия закреплены отдельными специальными нормативными
-                        актами</p>
-                    <a href="./defending-work.html"><button type="button">Подробнее об услуге</button></a>
-                    <a href=""><button type="button" class="services-second-button">Оставить заявку</button></a>
+            <div class="row about-company-row">
+                <div class="col">
+                    <div class="about-company">
+                        <h1>Контакты</h1>
+                    </div>
+                    <div class="breadcrumbs">
+                        Главная <span class="chevron"></span> Контакты
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="services-page-wrapper industrial-safety">
-        <div class="container">
-            <div class="row defending-work-wrapper-row">
-                <div class="col-xl">
-                    <h2>Промышленная безопасность</h2>
-                </div>
-                <div class="col-sm">
-                    <p>Промышленная безопасность – комплекс мероприятий, входящий в систему управления рисками на
-                        предприятии. Она подразумевает организацию условий труда на предприятии с минимальным риском
-                        возникновения аварий, с одной стороны, и разработку оптимального плана действий на случай аварии
-                        на производстве с целью минимизации негативных последствий для сотрудников и населения – с
-                        другой</p>
-                    <a href="./industrial-safety.html"><button type="button">Подробнее об услуге</button></a>
-                    <a href=""><button type="button" class="services-second-button">Оставить заявку</button></a>
+    <div class="contacts-map-wrapper"></div>
+    <div class="container">
+        <div class="row contacts-information">
+            <div class="col-xs">
+                <div class="contacts-section">
+                    <img src="./img/contacts-address.jpg" alt="">
+                    <div class="contacts-section-title">Наш адрес</div>
+                    <p class="p-contacts-style">
+                        Казахстан, Алматы, пр. Достык 172
+                    </p>
                 </div>
             </div>
+            <div class="col-xs">
+                <div class="contacts-section">
+                    <img src="./img/contacts-email.jpg" alt="">
+                    <div class="contacts-section-title">Электронная почта</div>
+                    <p class="p-contacts-style">
+                        <a href="mailto:maditechnoexpert@gmail.com">maditechnoexpert@gmail.com</a>
+                    </p>
+                </div>
+            </div>
+            <div class="col-xs">
+                <div class="contacts-section">
+                    <img src="./img/contacts-phone.jpg" alt="">
+                    <div class="contacts-section-title">тЕЛЕФОН:</div>
+                    <p class="p-contacts-style">
+                        <ul>
+
+                            <li>+7 (701) 352 04 56</li>
+
+                        </ul>
+
+                    </p>
+                </div>
+            </div>
+
+        
+        <div class="contacts-information-substrate"></div>
         </div>
     </div>
-    <div class="services-page-wrapper fire-safety">
+    </div>
+    <div class="form-wrapper contacts-form-margin">
         <div class="container">
-            <div class="row defending-work-wrapper-row">
-                <div class="col-xl">
-                    <h2>Пожарная безопасность</h2>
-                </div>
-                <div class="col-sm">
-                    <p>Обучение по пожарной безопасности в Алматы, согласно Закону РК «О гражданской защите» является
-                        обязательной для каждого учреждения. Умение предотвратить возгорание, минимизировать риски и
-                        правильно вести при появлении внештатной ситуации – гарантия того, что негативный исход пожара
-                        удастся свести к минимуму</p>
-                    <a href="./fire-safety.html"><button type="button">Подробнее об услуге</button></a>
-                    <a href=""><button type="button" class="services-second-button">Оставить заявку</button></a>
+            <div class="row">
+                <div class="col-md-4 offset-4 form-wrapper-header-for-mobile">Хотите провести обучение по охране труда в
+                    Алматы?</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-5 offset-4 form-wrapper-header-for-mobile">
+                    <h2 class="h2-normal-style">Оставляйте заявку сейчас</h2>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-4 form-wrapper-background-for-mobile">
+                    <div class="form-women-background"></div>
+                </div>
+                <div class="col-md-8 form-wrapper-section-for-mobile">
+                    <form method="">
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputName">Как вас зовут?</label>
+                                <input type="text" class="form-control" id="inputName"
+                                    placeholder="Сорокина Маргарита Андреевна">
+                            </div>
+                            <div class="form-group col-md-6 form-col-margin">
+                                <label for="inputEmail">ваш e-mail</label>
+                                <input type="email" class="form-control" id="inputEmail" placeholder="">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-12">
+                                <label for="inputGoalOfEducation">Введите сообщение</label>
+                                <input type="text" class="form-control" id="inputGoalOfEducation">
+                            </div>
+
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-4">
+                                <div class="form-check">
+                                    <button type="submit"
+                                        class="btn btn-primary form-button form-my-own-button">Отправить</button>
+                                </div>
+                            </div>
+                            <div class="form-group col-sm-5">
+                                <input class="form-check-input form-my-own-checkbox" type="checkbox" id="gridCheck">
+                                <label class="form-check-label form-my-own-checkbox-text" for="gridCheck">
+                                    Нажимая на кнопку вы соглашаетесь
+                                    на обработку персональных данных
+                                </label>
+                            </div>
+                        </div>
+                </div>
+            </div>
+
+            </form>
         </div>
     </div>
-    <div class="services-page-wrapper electrical-safety">
-        <div class="container">
-            <div class="row defending-work-wrapper-row">
-                <div class="col-xl">
-                    <h2>Электро-безопасность</h2>
-                </div>
-                <div class="col-sm">
-                    <p>Основы электробезопасности – одна из составляющих курса по охране труда. Однако
-                        для работников, которые постоянно вынуждены контактировать с электроприборами
-                        и электрическими сетями обучение электробезопасности является обязательным курсом.
-                        В этот курс входит не только ознакомление с требованиями нормативно-правовых документов, но и
-                        программа для получения уровня допуска к работам с электричеством</p>
-                    <a href="./electrical-safety.html"><button type="button">Подробнее об услуге</button></a>
-                    <a href=""><button type="button" class="services-second-button">Оставить заявку</button></a>
-                </div>
-            </div>
-        </div>
+    </div>
+    </div>
     </div>
     <footer>
         <div class="container">
@@ -165,8 +210,8 @@
                 <div class="col-sm-3">
                     <h3>Контакты</h3>
                     <div class="footer-row-contacts">
-                        <div class="footer-row-contacts-email"><a
-                                href="mailto: maditechnoexpert@gmail.com">maditechnoexpert@gmail.com</a></div>
+                        <div class="footer-row-contacts-email"><a href="mailto: maditechnoexpert@gmail.com"
+                                class="flex-sm-fill">maditechnoexpert@gmail.com</a></div>
                         <div class="ooter-row-contacts-phone">+7 (701) 352 04 56</div>
                         <div class="ooter-row-contacts-address">Казахстан, г. Алматы, <br> пр. Достык 172</div>
                     </div>
@@ -193,6 +238,7 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="vanilla-js-carousel-master/carousel.js"></script>
+
 
 </body>
 
