--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                                 <a class="dropdown-item" href="./about-company.html">О компании</a>
                                 <a class="dropdown-item" href="./services.html">Услуги</a>
                                 <a class="dropdown-item" href="./defending-work.html">Охрана труда</a>
-                                <a class="dropdown-item" href="./defending-work.html">Промышленная безопасность</a>
-                                <a class="dropdown-item" href="./industrial-safety.html">Электробезопасность</a>
+                                <a class="dropdown-item" href="./industrial-safety.html">Промышленная безопасность</a>
+                                <a class="dropdown-item" href="./electrical-safety.html">Электробезопасность</a>
                                 <a class="dropdown-item" href="./aditional-services.html">Дополнительные услуги</a>
                                 <a class="dropdown-item" href="#">Цены</a>
                                 <a class="dropdown-item" href="#">Законы</a>
                                 <a class="dropdown-item" href="#">Блог</a>
-                                <a class="dropdown-item" href="#">Контакты</a>
+                                <a class="dropdown-item" href="./contacts.html">Контакты</a>
                             </div>
                         </div>
 
