--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="col-auto menu-button-column">
 
-                        <div class="dropdown menu-button">
+                        <div class="dropdown dropleft menu-button">
                             <button class="btn btn-secondary menu-button text-sm-right pr-4" type="button"
                                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
